  can no longer be configured with |vim.lsp.with()|.
  Instead use: >lua
    vim.diagnostic.config(config, vim.lsp.diagnostic.get_namespace(client_id))
<
• |vim.lsp.util.make_position_params()|, |vim.lsp.util.make_range_params()|
  and |vim.lsp.util.make_given_range_params()| now require the `position_encoding`
  parameter.

LUA

• API functions now consistently return an empty dictionary as
  |vim.empty_dict()|. Earlier, a |lua-special-tbl| was sometimes used.
• Command-line completions for: `vim.g`, `vim.t`, `vim.w`, `vim.b`, `vim.v`,
  `vim.o`, `vim.wo`, `vim.bo`, `vim.opt`, `vim.opt_local`, `vim.opt_global`,
  and `vim.fn`.

OPTIONS

• The 'statuscolumn' `%l` item can now be used as a number column segment that
  changes according to related options. It takes care of alignment, 'number',
  'relativenumber' and 'signcolumn' set to "number". The now redundant `%r` item
  is no longer treated specially for 'statuscolumn'.
• `:set {option}<` removes the local value for all |global-local| options instead
  of just string |global-local| options.
• `:setlocal {option}<` copies the global value to the local value for number
  and boolean |global-local| options instead of removing the local value.
• Setting |hidden-options| now gives an error. In particular, setting
  'noshellslash' is now only allowed on Windows.

PLUGINS

• TODO

TREESITTER

• |Query:iter_matches()| correctly returns all matching nodes in a match
  instead of only the last node. This means that the returned table maps
  capture IDs to a list of nodes that need to be iterated over. For
  backwards compatibility, an option `all=false` (only return the last
  matching node) is provided that will be removed in a future release.
• |vim.treesitter.language.get_filetypes()| always includes the {language}
  argument in addition to explicitly registered filetypes.
• |vim.treesitter.language.get_lang()| falls back to the {filetype} argument
  if no languages are explicitly registered.